# MultiAgentRAG

./: main.py  pyproject.toml
agents/: Agent.py  RetrievalAgent.py  SupervisorAgent.py  WebAgent.py  __init__.py
graph/: MainGraph.py
graph/schema/: section.py
graph/state/: State.py
tools/: __init__.py  retrieval.py  transfer.py  web_search.py
