[project]
name = "multiagentrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "huggingface>=0.0.1",
    "langchain>=0.3.27",
    "langchain-google-community>=2.0.10",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langchain-qdrant>=0.2.1",
    "langgraph>=0.6.10",
    "qdrant-client>=1.15.1",
]
